Fix h1 text overflow.

--- a/web/model-manager.css
+++ b/web/model-manager.css
@@ -44,7 +44,7 @@
 
 /* common */
 .model-manager h1 {
-    min-width: 0;
+    overflow-wrap: break-word;
 }
 
 .model-manager textarea {
